# francisco

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/francisco/: __init__.py  agent.py  agent_models.py  logger.py  main.py  mcp_server.py
src/francisco/config/: __init__.py  francisco.yaml  francisco_prompt.txt
tests/: __init__.py  test_agent.py  test_logger.py  test_main.py  test_setup.py
